syntax = "proto3";

package com.dipper.proto.rpc;

option java_package = "com.dipper.proto.rpc";
option java_outer_classname = "FriendMessageProto";
option java_multiple_files = true;

service FriendMessageService {
}

message FriendMessagePro {
    int32 id = 1;
    int32 from_user_id = 2;
    int32 to_user_id = 3;
    string content = 4;
    string send_time = 5;
    int32 is_read = 6;
    int32 is_del = 7;
    int32 is_back = 8;
}